# lu-neural-chaos

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: bench.yml  ci.yml  lint.yml  test.yml
scripts/: dataloader_init.py  log.py  train_utils.py  utils.py
scripts/l96_data_x/: generate_data.py
src/neural_chaos/: __init__.py  __main__.py
src/neural_chaos/benches/: test_performance.py
src/neural_chaos/tests/: test_setup.py
