[project]
name = "neural-chaos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chris", email = "cpredmond98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
]

[project.scripts]
neural-chaos = "neural_chaos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest-codspeed>=3.1.2",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "pytest-cov>=6.0.0",
]


[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]
lint.extend-select = ["ANN"]

[tool.pyright]
include = ["src"]
strict = ["src"]
